# nexus-be-genai25

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  docker-compose.yaml  github-parse  models.py  pyproject.toml
controllers/: agent.py  job.py  job_application.py
schema/: agent.py  job.py  job_application.py
utils/: candidate.py  github_parse.py
